frontend_tests/negative/builtin_clear_operand/cmd/app/main.go
package main

func main() {
	clear(1)
}
